# safely

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
include/safely/: error.hpp  predef.hpp  primitives.hpp  safely.hpp
include/safely/detail/: msvc_overflow_intrinsics.hpp  traits.hpp  unchecked.hpp
include/safely/ops/: add.hpp  cast.hpp  cmp.hpp  div.hpp  mul.hpp  neg.hpp  rem.hpp  rotl.hpp  rotr.hpp  shl.hpp  shr.hpp  sub.hpp
modules/: safely.cppm
tests/: safely_tests.main.cpp
tests/common/: types.hpp
tests/detail/: traits.test.cpp
tests/ops/: add.test.cpp  add_sat.test.cpp  add_wrap.test.cpp  div.test.cpp  mul.test.cpp  mul_sat.test.cpp  mul_wrap.test.cpp  rem.test.cpp  rotl.test.cpp  rotr.test.cpp  shl.test.cpp  shr.test.cpp  sub.test.cpp  sub_sat.test.cpp  sub_wrap.test.cpp
tools/cmake/: common.cmake
tools/cmake/targets/: safely.cmake  safely_mod.cmake  safely_tests.cmake
